added hybrid automata formalisation to maude chapter

--- a/Main.tex
+++ b/Main.tex
@@ -69,6 +69,13 @@
 % \newtheorem{theorem}{Theorem}[section]
 
 \usepackage{tikz}
+\usepgflibrary{arrows}
+\usetikzlibrary{arrows,decorations.pathmorphing,backgrounds,fit}
+\usetikzlibrary{shapes.geometric}
+\usepgflibrary{shapes.geometric}
+\usetikzlibrary{shapes.symbols}
+\usepgflibrary{shapes.callouts}
+\usetikzlibrary{shapes.callouts}
 %%\usetikzlibrary{arrows,backgrounds,snakes,shapes}
 
 
