--- a/lit.bib
+++ b/lit.bib
@@ -546,7 +546,7 @@
   Author                   = {Henzinger, T. A.},
   Booktitle                = {Proceedings of the 11th Annual IEEE Symposium on Logic in Computer Science},
   Year                     = {1996},
-  Pages                    = {278--},
+  Pages                    = {278--292},
   Publisher                = {IEEE Computer Society},
   Series                   = {LICS '96}
 }
