--- a/Maude.tex
+++ b/Maude.tex
@@ -561,7 +561,7 @@ endfm
 
 
 \section{Real Time Maude}
-
+A Real Timed Maude specification consists of \emph{timed modules} that start with \texttt{tmod} and end with \texttt{endtm}.
 \subsection{Real Time Maude Specifications}
 
 \subsubsection*{Example Real Time Maude Specification}
@@ -601,7 +601,7 @@ Result ClockedSystem :
 
 
 \subsection{Object Orientated Specification in Real Time Maude}
-Real Time Maude is based on Full Maude which contains language constructs for object orientated specification.
+Real Time Maude is based on Full Maude which contains language constructs for object orientated specification these constructs can be used in \emph{timed object orientated modules} which start with \texttt{tomod} and end with \texttt{endtom}.
 
 \section{Modelling the European Rail Traffic Management System}
 
