--- a/Main.tex
+++ b/Main.tex
@@ -223,7 +223,7 @@ ${ \ } $ \vspace{4cm}
 %%% The interactive theorem proving was applied to our SAT algorithm
 
 \begin{center}
-{\huge \bf A Selection of Tools and Techniques for the Verification of Train Control Systems }
+{\huge \bf Verification of Train Control Systems: Tools and Techniques}
 \end{center}
 
 \begin{center}
